v1.1.0/modules/schema/pages/class/UnderexcLimIEEE2.adoc
= `UnderexcLimIEEE2`
:toclevels: 4


+++Type UEL2 underexcitation limiter which has either a straight-line or multi-segment characteristic when plotted in terms of machine reactive power output vs. real power output.
Reference: IEEE UEL2 421.5-2005, 10.2  (limit characteristic lookup table shown in Figure 10.4 (p 32)).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:UnderexcLimIEEE2`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]
**** *`UnderexcLimIEEE2`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<k1,`k1`>>
//| [[slots_table.k1]]<<k1,`k1`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++UEL terminal voltage exponent applied to real power input to UEL limit look-up table (<i>k1</i>).  Typical value = 2.+++
| _n/a_

| <<k2,`k2`>>
//| [[slots_table.k2]]<<k2,`k2`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++UEL terminal voltage exponent applied to reactive power output from UEL limit look-up table (<i>k2</i>).  Typical value = 2.+++
| _n/a_

| <<kfb,`kfb`>>
//| [[slots_table.kfb]]<<kfb,`kfb`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Gain associated with optional integrator feedback input signal to UEL (<i>K</i><i><sub>FB</sub></i>).  Typical value = 0.+++
| _n/a_

| <<kuf,`kuf`>>
//| [[slots_table.kuf]]<<kuf,`kuf`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++UEL excitation system stabilizer gain (<i>K</i><i><sub>UF</sub></i>).  Typical value = 0.+++
| _n/a_

| <<kui,`kui`>>
//| [[slots_table.kui]]<<kui,`kui`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++UEL integral gain (<i>K</i><i><sub>UI</sub></i>).  Typical value = 0,5.+++
| _n/a_

| <<kul,`kul`>>
//| [[slots_table.kul]]<<kul,`kul`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++UEL proportional gain (<i>K</i><i><sub>UL</sub></i>).  Typical value = 0,8.+++
| _n/a_

| <<p0,`p0`>>
//| [[slots_table.p0]]<<p0,`p0`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Real power values for endpoints (<i>P</i><i><sub>0</sub></i>).  Typical value = 0.+++
| _n/a_

| <<p1,`p1`>>
//| [[slots_table.p1]]<<p1,`p1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Real power values for endpoints (<i>P</i><i><sub>1</sub></i>).  Typical value = 0,3.+++
| _n/a_

| <<p10,`p10`>>
//| [[slots_table.p10]]<<p10,`p10`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Real power values for endpoints (<i>P</i><i><sub>10</sub></i>).+++
| _n/a_

| <<p2,`p2`>>
//| [[slots_table.p2]]<<p2,`p2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Real power values for endpoints (<i>P</i><i><sub>2</sub></i>).  Typical value = 0,6.+++
| _n/a_

| <<p3,`p3`>>
//| [[slots_table.p3]]<<p3,`p3`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Real power values for endpoints (<i>P</i><i><sub>3</sub></i>).  Typical value = 0,9.+++
| _n/a_

| <<p4,`p4`>>
//| [[slots_table.p4]]<<p4,`p4`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Real power values for endpoints (<i>P</i><i><sub>4</sub></i>).  Typical value = 1,02.+++
| _n/a_

| <<p5,`p5`>>
//| [[slots_table.p5]]<<p5,`p5`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Real power values for endpoints (<i>P</i><i><sub>5</sub></i>).+++
| _n/a_

| <<p6,`p6`>>
//| [[slots_table.p6]]<<p6,`p6`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Real power values for endpoints (<i>P</i><i><sub>6</sub></i>).+++
| _n/a_

| <<p7,`p7`>>
//| [[slots_table.p7]]<<p7,`p7`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Real power values for endpoints (<i>P</i><i><sub>7</sub></i>).+++
| _n/a_

| <<p8,`p8`>>
//| [[slots_table.p8]]<<p8,`p8`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Real power values for endpoints (<i>P</i><i><sub>8</sub></i>).+++
| _n/a_

| <<p9,`p9`>>
//| [[slots_table.p9]]<<p9,`p9`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Real power values for endpoints (<i>P</i><i><sub>9</sub></i>).+++
| _n/a_

| <<q0,`q0`>>
//| [[slots_table.q0]]<<q0,`q0`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Reactive power values for endpoints (<i>Q</i><i><sub>0</sub></i>).  Typical value = -0,31.+++
| _n/a_

| <<q1,`q1`>>
//| [[slots_table.q1]]<<q1,`q1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Reactive power values for endpoints (<i>Q</i><i><sub>1</sub></i>).  Typical value = -0,31.+++
| _n/a_

| <<q10,`q10`>>
//| [[slots_table.q10]]<<q10,`q10`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Reactive power values for endpoints (<i>Q</i><i><sub>10</sub></i>).+++
| _n/a_

| <<q2,`q2`>>
//| [[slots_table.q2]]<<q2,`q2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Reactive power values for endpoints (<i>Q</i><i><sub>2</sub></i>).  Typical value = -0,28.+++
| _n/a_

| <<q3,`q3`>>
//| [[slots_table.q3]]<<q3,`q3`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Reactive power values for endpoints (<i>Q</i><i><sub>3</sub></i>).  Typical value = -0,21.+++
| _n/a_

| <<q4,`q4`>>
//| [[slots_table.q4]]<<q4,`q4`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Reactive power values for endpoints (<i>Q</i><i><sub>4</sub></i>).  Typical value = 0.+++
| _n/a_

| <<q5,`q5`>>
//| [[slots_table.q5]]<<q5,`q5`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Reactive power values for endpoints (<i>Q</i><i><sub>5</sub></i>).+++
| _n/a_

| <<q6,`q6`>>
//| [[slots_table.q6]]<<q6,`q6`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Reactive power values for endpoints (<i>Q</i><i><sub>6</sub></i>).+++
| _n/a_

| <<q7,`q7`>>
//| [[slots_table.q7]]<<q7,`q7`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Reactive power values for endpoints (<i>Q</i><i><sub>7</sub></i>).+++
| _n/a_

| <<q8,`q8`>>
//| [[slots_table.q8]]<<q8,`q8`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Reactive power values for endpoints (<i>Q</i><i><sub>8</sub></i>).+++
| _n/a_

| <<q9,`q9`>>
//| [[slots_table.q9]]<<q9,`q9`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Reactive power values for endpoints (<i>Q</i><i><sub>9</sub></i>).+++
| _n/a_

| <<tu1,`tu1`>>
//| [[slots_table.tu1]]<<tu1,`tu1`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++UEL lead time constant (<i>T</i><i><sub>U1</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<tu2,`tu2`>>
//| [[slots_table.tu2]]<<tu2,`tu2`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++UEL lag time constant (<i>T</i><i><sub>U2</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<tu3,`tu3`>>
//| [[slots_table.tu3]]<<tu3,`tu3`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++UEL lead time constant (<i>T</i><i><sub>U3</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<tu4,`tu4`>>
//| [[slots_table.tu4]]<<tu4,`tu4`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++UEL lag time constant (<i>T</i><i><sub>U4</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<tul,`tul`>>
//| [[slots_table.tul]]<<tul,`tul`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant associated with optional integrator feedback input signal to UEL (<i>T</i><i><sub>UL</sub></i>) (&gt;= 0). ...+++
| _n/a_

| <<tup,`tup`>>
//| [[slots_table.tup]]<<tup,`tup`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Real power filter time constant (<i>T</i><i><sub>UP</sub></i>) (&gt;= 0).  Typical value = 5.+++
| _n/a_

| <<tuq,`tuq`>>
//| [[slots_table.tuq]]<<tuq,`tuq`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Reactive power filter time constant (<i>T</i><i><sub>UQ</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<tuv,`tuv`>>
//| [[slots_table.tuv]]<<tuv,`tuv`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Voltage filter time constant (<i>T</i><i><sub>UV</sub></i>) (&gt;= 0).  Typical value = 5.+++
| _n/a_

| <<vuimax,`vuimax`>>
//| [[slots_table.vuimax]]<<vuimax,`vuimax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++UEL integrator output maximum limit (<i>V</i><i><sub>UIMAX</sub></i>) (&gt; UnderexcLimIEEE2.vuimin).  Typical value = 0,25.+++
| _n/a_

| <<vuimin,`vuimin`>>
//| [[slots_table.vuimin]]<<vuimin,`vuimin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++UEL integrator output minimum limit (<i>V</i><i><sub>UIMIN</sub></i>) (&lt; UnderexcLimIEEE2.vuimax).  Typical value = 0.+++
| _n/a_

| <<vulmax,`vulmax`>>
//| [[slots_table.vulmax]]<<vulmax,`vulmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++UEL output maximum limit (<i>V</i><i><sub>ULMAX</sub></i>) (&gt; UnderexcLimIEEE2.vulmin).  Typical value = 0,25.+++
| _n/a_

| <<vulmin,`vulmin`>>
//| [[slots_table.vulmin]]<<vulmin,`vulmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++UEL output minimum limit (<i>V</i><i><sub>ULMIN</sub></i>) (&lt; UnderexcLimIEEE2.vulmax).  Typical value = 0.+++
| _n/a_

| <<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
//| [[slots_table.ExcitationSystemDynamics]]<<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
| 1 +
xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
| +++Excitation system model with which this underexcitation limiter model is associated.+++
| xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]

| <<RemoteInputSignal,`RemoteInputSignal`>>
//| [[slots_table.RemoteInputSignal]]<<RemoteInputSignal,`RemoteInputSignal`>>
| 0..1 +
xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]
| +++Remote input signal used by this underexcitation limiter model.+++
| xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#ExcitationSystemDynamics]
=== `ExcitationSystemDynamics`
+++Excitation system model with which this underexcitation limiter model is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcitationLimiterDynamics.ExcitationSystemDynamics`
| Cardinality
| 1
| Type
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| Inherited from
| xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]


|===

////
[.text-left]
--
<<slots_table.ExcitationSystemDynamics,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#k1]
=== `k1`
+++UEL terminal voltage exponent applied to real power input to UEL limit look-up table (<i>k1</i>).  Typical value = 2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.k1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.k1,&#10548;>>
--
////


//[discrete]
[#k2]
=== `k2`
+++UEL terminal voltage exponent applied to reactive power output from UEL limit look-up table (<i>k2</i>).  Typical value = 2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.k2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.k2,&#10548;>>
--
////


//[discrete]
[#kfb]
=== `kfb`
+++Gain associated with optional integrator feedback input signal to UEL (<i>K</i><i><sub>FB</sub></i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.kfb`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kfb,&#10548;>>
--
////


//[discrete]
[#kuf]
=== `kuf`
+++UEL excitation system stabilizer gain (<i>K</i><i><sub>UF</sub></i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.kuf`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kuf,&#10548;>>
--
////


//[discrete]
[#kui]
=== `kui`
+++UEL integral gain (<i>K</i><i><sub>UI</sub></i>).  Typical value = 0,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.kui`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kui,&#10548;>>
--
////


//[discrete]
[#kul]
=== `kul`
+++UEL proportional gain (<i>K</i><i><sub>UL</sub></i>).  Typical value = 0,8.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.kul`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kul,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#p0]
=== `p0`
+++Real power values for endpoints (<i>P</i><i><sub>0</sub></i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.p0`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.p0,&#10548;>>
--
////


//[discrete]
[#p1]
=== `p1`
+++Real power values for endpoints (<i>P</i><i><sub>1</sub></i>).  Typical value = 0,3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.p1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.p1,&#10548;>>
--
////


//[discrete]
[#p10]
=== `p10`
+++Real power values for endpoints (<i>P</i><i><sub>10</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.p10`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.p10,&#10548;>>
--
////


//[discrete]
[#p2]
=== `p2`
+++Real power values for endpoints (<i>P</i><i><sub>2</sub></i>).  Typical value = 0,6.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.p2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.p2,&#10548;>>
--
////


//[discrete]
[#p3]
=== `p3`
+++Real power values for endpoints (<i>P</i><i><sub>3</sub></i>).  Typical value = 0,9.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.p3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.p3,&#10548;>>
--
////


//[discrete]
[#p4]
=== `p4`
+++Real power values for endpoints (<i>P</i><i><sub>4</sub></i>).  Typical value = 1,02.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.p4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.p4,&#10548;>>
--
////


//[discrete]
[#p5]
=== `p5`
+++Real power values for endpoints (<i>P</i><i><sub>5</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.p5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.p5,&#10548;>>
--
////


//[discrete]
[#p6]
=== `p6`
+++Real power values for endpoints (<i>P</i><i><sub>6</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.p6`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.p6,&#10548;>>
--
////


//[discrete]
[#p7]
=== `p7`
+++Real power values for endpoints (<i>P</i><i><sub>7</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.p7`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.p7,&#10548;>>
--
////


//[discrete]
[#p8]
=== `p8`
+++Real power values for endpoints (<i>P</i><i><sub>8</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.p8`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.p8,&#10548;>>
--
////


//[discrete]
[#p9]
=== `p9`
+++Real power values for endpoints (<i>P</i><i><sub>9</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.p9`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.p9,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#q0]
=== `q0`
+++Reactive power values for endpoints (<i>Q</i><i><sub>0</sub></i>).  Typical value = -0,31.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.q0`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.q0,&#10548;>>
--
////


//[discrete]
[#q1]
=== `q1`
+++Reactive power values for endpoints (<i>Q</i><i><sub>1</sub></i>).  Typical value = -0,31.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.q1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.q1,&#10548;>>
--
////


//[discrete]
[#q10]
=== `q10`
+++Reactive power values for endpoints (<i>Q</i><i><sub>10</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.q10`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.q10,&#10548;>>
--
////


//[discrete]
[#q2]
=== `q2`
+++Reactive power values for endpoints (<i>Q</i><i><sub>2</sub></i>).  Typical value = -0,28.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.q2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.q2,&#10548;>>
--
////


//[discrete]
[#q3]
=== `q3`
+++Reactive power values for endpoints (<i>Q</i><i><sub>3</sub></i>).  Typical value = -0,21.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.q3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.q3,&#10548;>>
--
////


//[discrete]
[#q4]
=== `q4`
+++Reactive power values for endpoints (<i>Q</i><i><sub>4</sub></i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.q4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.q4,&#10548;>>
--
////


//[discrete]
[#q5]
=== `q5`
+++Reactive power values for endpoints (<i>Q</i><i><sub>5</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.q5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.q5,&#10548;>>
--
////


//[discrete]
[#q6]
=== `q6`
+++Reactive power values for endpoints (<i>Q</i><i><sub>6</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.q6`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.q6,&#10548;>>
--
////


//[discrete]
[#q7]
=== `q7`
+++Reactive power values for endpoints (<i>Q</i><i><sub>7</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.q7`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.q7,&#10548;>>
--
////


//[discrete]
[#q8]
=== `q8`
+++Reactive power values for endpoints (<i>Q</i><i><sub>8</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.q8`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.q8,&#10548;>>
--
////


//[discrete]
[#q9]
=== `q9`
+++Reactive power values for endpoints (<i>Q</i><i><sub>9</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.q9`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.q9,&#10548;>>
--
////


//[discrete]
[#RemoteInputSignal]
=== `RemoteInputSignal`
+++Remote input signal used by this underexcitation limiter model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcitationLimiterDynamics.RemoteInputSignal`
| Cardinality
| 0..1
| Type
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]

| Inherited from
| xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]


|===

////
[.text-left]
--
<<slots_table.RemoteInputSignal,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tu1]
=== `tu1`
+++UEL lead time constant (<i>T</i><i><sub>U1</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.tu1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tu1,&#10548;>>
--
////


//[discrete]
[#tu2]
=== `tu2`
+++UEL lag time constant (<i>T</i><i><sub>U2</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.tu2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tu2,&#10548;>>
--
////


//[discrete]
[#tu3]
=== `tu3`
+++UEL lead time constant (<i>T</i><i><sub>U3</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.tu3`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tu3,&#10548;>>
--
////


//[discrete]
[#tu4]
=== `tu4`
+++UEL lag time constant (<i>T</i><i><sub>U4</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.tu4`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tu4,&#10548;>>
--
////


//[discrete]
[#tul]
=== `tul`
+++Time constant associated with optional integrator feedback input signal to UEL (<i>T</i><i><sub>UL</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.tul`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tul,&#10548;>>
--
////


//[discrete]
[#tup]
=== `tup`
+++Real power filter time constant (<i>T</i><i><sub>UP</sub></i>) (&gt;= 0).  Typical value = 5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.tup`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tup,&#10548;>>
--
////


//[discrete]
[#tuq]
=== `tuq`
+++Reactive power filter time constant (<i>T</i><i><sub>UQ</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.tuq`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tuq,&#10548;>>
--
////


//[discrete]
[#tuv]
=== `tuv`
+++Voltage filter time constant (<i>T</i><i><sub>UV</sub></i>) (&gt;= 0).  Typical value = 5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.tuv`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tuv,&#10548;>>
--
////


//[discrete]
[#vuimax]
=== `vuimax`
+++UEL integrator output maximum limit (<i>V</i><i><sub>UIMAX</sub></i>) (&gt; UnderexcLimIEEE2.vuimin).  Typical value = 0,25.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.vuimax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vuimax,&#10548;>>
--
////


//[discrete]
[#vuimin]
=== `vuimin`
+++UEL integrator output minimum limit (<i>V</i><i><sub>UIMIN</sub></i>) (&lt; UnderexcLimIEEE2.vuimax).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.vuimin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vuimin,&#10548;>>
--
////


//[discrete]
[#vulmax]
=== `vulmax`
+++UEL output maximum limit (<i>V</i><i><sub>ULMAX</sub></i>) (&gt; UnderexcLimIEEE2.vulmin).  Typical value = 0,25.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.vulmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vulmax,&#10548;>>
--
////


//[discrete]
[#vulmin]
=== `vulmin`
+++UEL output minimum limit (<i>V</i><i><sub>ULMIN</sub></i>) (&lt; UnderexcLimIEEE2.vulmax).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE2.vulmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vulmin,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
